--- a/src/components/teamBoxes/teamTwoBox.css
+++ b/src/components/teamBoxes/teamTwoBox.css
@@ -4,10 +4,10 @@
   justify-content: center;
 }
 .blueBoxCard {
-  height: fit-content;
+  display: flex;
+  flex-direction: column;
   color: #d2dcde;
   padding: 15px 15px 25px 15px;
-  font-size: 16px;
   background-color: #365e7f;
   border-radius: 6px;
   border: black solid 1px;
@@ -17,8 +17,10 @@
   grid-area: blueTeam;
   width: 60%;
   height: 30vh;
+  justify-content: space-evenly;
+  font-size: larger;
 }
-.blueBoxCard h3 {
+.blueBoxCard h2 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,6 +47,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   margin-top: 30px;
+  padding-left: 1vw;
 }
 .blueOpsAndSpys p {
   margin: 8px 0 8px;
